# OpenSquirrel

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.cursor/rules/: launch-opensquirrel-app.mdc
assets/: OpenSquirrel.icns
docs/plans/: 2026-03-18-linux-appimage.md
linux/: AppRun  README.md  opensquirrel.appdata.xml  opensquirrel.desktop
scripts/: build-appimage.sh  build-deb.sh  build-linux-release.sh  check-linux-build.sh  create-github-release.sh  launch-opensquirrel-app.sh
src/: lib.rs  main.rs
tests/: state_tests.rs
