[package]
name = "opensquirrel"
version = "0.1.0"
edition = "2024"
description = "GPU-rendered, keyboard-driven agent tiling manager"
license = "MIT"

[dependencies]
gpui = "0.2"
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0.102"
whisper-rs = { version = "0.15", features = ["metal"] }
cpal = "0.17"
