[package]
name = "opensquirrel"
version = "0.1.0"
edition = "2024"
description = "GPU-rendered, keyboard-driven agent tiling manager"
license = "MIT"

[dependencies]
gpui = "0.2"
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0.102"
cpal = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.15" }
